# cyt-finance

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml
.claude/sdd/archive/CYT_FINANCE_V2/: BRAINSTORM_CYT_FINANCE_V2.md  BUILD_REPORT_CYT_FINANCE_V2_F0.md  BUILD_REPORT_CYT_FINANCE_V2_F1.md  (+9 more)
.github/workflows/: ci.yml
.gstack/qa-reports/: qa-report-cyt-finance-v2-2026-04-20.md
apps/api/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
apps/api/docs/: cron-setup.md
apps/api/src/: config.py  deps.py  main.py
apps/api/src/routers/: health.py  recurring.py  reports.py
apps/api/src/schemas/: recurring.py  reports.py
apps/api/src/services/: pdf_service.py  recurring_service.py  supabase_service.py
apps/api/src/templates/: report.html.j2
apps/api/tests/: conftest.py  test_health.py  test_installments.py  test_recurring.py  test_reports.py  test_rls.py
apps/web/: .env.test  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx
legacy/v1/: README.md
supabase/: config.toml
supabase/functions/send-invite-email/: index.ts
supabase/migrations/: 20260420000001_identity.sql  20260420000002_domain.sql  20260420000003_audit.sql  20260420000004_functions.sql  20260420000005_rls_policies.sql  20260420000006_seed_categories.sql  20260420100000_fix_ws_read_includes_owner.sql  20260420110000_fix_rpc_nullable_params.sql  20260420120000_audit_user_id_nullable.sql  README.md
supabase/tests/: README.md
(+47 files in other folders)
